--- a/subone/pom.xml
+++ b/subone/pom.xml
@@ -15,6 +15,8 @@
         <dependency>
             <groupId>com.alyn</groupId>
             <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
