--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,21 +21,13 @@
             <groupId>com.alyn</groupId>
             <artifactId>sub-one</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.alyn</groupId>
             <artifactId>sub-two</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.2.6.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>4.2.6.RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
